# pyttch

./: .gitignore  CLAUDE.md  CLI.md  Cargo.toml  README.md
.cargo/: config.toml
.gitea/workflows/: ci.yaml  release.yaml
src/: lib.rs  listen.rs  main.rs
tests/: listen.rs  send.rs
